Day3后台的完善与细节处理

--- a/src/main/resources/static/layuiadmin/layui/css/layui.css
+++ b/src/main/resources/static/layuiadmin/layui/css/layui.css
@@ -1775,8 +1775,8 @@ a cite {
     height: 38px;
     line-height: 38px;
     padding: 0 18px;
-    background-color: #009688;
-    color: #fff;
+    background-color: #8B658B;
+    color: #0C0C0C;
     white-space: nowrap;
     text-align: center;
     font-size: 14px;
