--- a/src/main/resources/templates/admin/login/adminlogin.html
+++ b/src/main/resources/templates/admin/login/adminlogin.html
@@ -15,27 +15,33 @@
 
     <div class="layadmin-user-login-main">
         <div class="layadmin-user-login-box layadmin-user-login-header">
-            <h2>立知行后台管理系统</h2>
+            <h2 style="color: #f9f9f9">打败携程后台管理系统</h2>
         </div>
+        <br>
+        <br>
         <div class="layadmin-user-login-box layadmin-user-login-body layui-form">
             <div class="layui-form-item">
                 <label class="layadmin-user-login-icon layui-icon layui-icon-username" for="LAY-user-login-username"></label>
                 <input type="text" name="name" id="LAY-user-login-username" lay-verify="required" placeholder="用户名/手机号" class="layui-input">
             </div>
+            <br>
+            <br>
             <div class="layui-form-item">
                 <label class="layadmin-user-login-icon layui-icon layui-icon-password" for="LAY-user-login-password"></label>
                 <input type="password" name="password" id="LAY-user-login-password" lay-verify="required" placeholder="密码" class="layui-input">
             </div>
+            <br>
+            <br>
             <div class="layui-form-item">
-                <button class="layui-btn layui-btn-fluid" lay-submit lay-filter="LAY-user-login-submit">登 入</button>
+                <button class="layui-btn layui-btn-fluid" lay-submit lay-filter="LAY-user-login-submit">登 录</button>
             </div>
         </div>
     </div>
 
     <div class="layui-trans layadmin-user-login-footer">
 
-        <p>© 2021
-            <a href="/dist/view" target="_blank">xingying.com</a>
+        <p style="color: #f9f9f9">© 2024
+            <a href="/dist/view" target="_blank" style="color: #f9f9f9">dabaixiecheng.com</a>
         </p>
     </div>
 
@@ -81,7 +87,7 @@
                             location.href = '/admin/index'; //后台主页
                         });
                     } else {
-                        layer.msg(result.message, {
+                        layer.msg(result.msg, {
                             icon: 5
                         });
                     }
