--- a/src/main/resources/templates/page/index.html
+++ b/src/main/resources/templates/page/index.html
@@ -378,8 +378,10 @@
                                      class="img2 img-responsive">
                             </figure>
                             <div class="caption">
-                                <div class="txt1">惊人的旅行</div>
-                                <div class="txt2">来一场书走就走的旅行
+
+                                <div class="txt1" >惊人的旅行</div>
+
+                                <div class="txt2">来一场说走就走的旅行
                                 </div>
                             </div>
                         </a>
