--- a/src/main/resources/templates/admin/echars/console.html
+++ b/src/main/resources/templates/admin/echars/console.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
@@ -27,7 +28,7 @@
         backgroundColor: "#344b58",
         "title": {
             "text": "本年订单数量统计",
-            "subtext": "BY LiZhiXing",
+            "subtext": "BY dabaixiecheng",
             x: "4%",
 
             textStyle: {
