--- a/src/main/resources/templates/admin/carouselmanage/carouselList.html
+++ b/src/main/resources/templates/admin/carouselmanage/carouselList.html
@@ -113,9 +113,9 @@
                         contentType: "application/json;charset=utf-8",
                         success: function(result) {
                             if(result.code == 0) {
-                                layer.msg(result.message,{icon: 1});
+                                layer.msg(result.msg,{icon: 1});
                             } else {
-                                layer.msg(result.message, {
+                                layer.msg(result.msg, {
                                     icon: 5
                                 });
                             }
@@ -154,9 +154,9 @@
                         contentType: "application/json;charset=utf-8",
                         success: function(result) {
                             if(result.code == 0) {
-                                layer.msg(result.message,{icon: 1});
+                                layer.msg(result.msg,{icon: 1});
                             } else {
-                                layer.msg(result.message, {
+                                layer.msg(result.msg, {
                                     icon: 5
                                 });
                             }
@@ -229,11 +229,11 @@
                             //登入成功的提示
 
                             layer.msg(
-                                result.message,{
+                                result.msg,{
                                     icon: 1
                                 });
                         } else {
-                            layer.msg(result.message, {
+                            layer.msg(result.msg, {
                                 icon: 5
                             });
                         }
