--- a/src/main/resources/templates/admin/hotelmanage/hotelAdd.html
+++ b/src/main/resources/templates/admin/hotelmanage/hotelAdd.html
@@ -142,11 +142,11 @@
 
                         //登入成功的提示
                         layer.msg(
-                            result.message,{
+                            result.msg,{
                                 icon: 1
                             });
                     } else {
-                        layer.msg(result.message, {
+                        layer.msg(result.msg, {
                             icon: 5
                         });
                     }
