--- a/src/main/resources/templates/admin/hotelmanage/hotelList.html
+++ b/src/main/resources/templates/admin/hotelmanage/hotelList.html
@@ -15,7 +15,19 @@
         <div class="layui-col-md12">
             <div class="layui-card">
                 <div class="layui-card-header">酒店列表</div>
+
                 <div class="layui-card-body">
+<!--                    <form class="layui-form" action="/hotel/find">-->
+<!--                    <div class="layui-input-inline">-->
+<!--                    <input type="tel" name="searContent" autocomplete="off"-->
+<!--                    placeholder="输入酒店名字" class="layui-input">-->
+<!--                    </div>-->
+<!--                    <div class="layui-input-inline " style="width: 90px">-->
+<!--                    <button class="layui-btn" id="searchEmailCompany" data-type="reload">-->
+<!--                    <i class="layui-icon" style="font-size: 20px; "></i> 搜索-->
+<!--                    </button>-->
+<!--                    </div>-->
+<!--                    </form>-->
 
                     <table class="layui-hide" id="test-table-reload" lay-filter="test-table-reload"></table>
 
