--- a/src/main/resources/templates/admin/login/adminlogin.html
+++ b/src/main/resources/templates/admin/login/adminlogin.html
@@ -36,6 +36,14 @@
                 <button class="layui-btn layui-btn-fluid" lay-submit lay-filter="LAY-user-login-submit">登 录</button>
             </div>
         </div>
+        <div class="layui-trans layui-form-item layadmin-user-login-other">
+            <label>社交账号登入</label>
+            <a href="javascript:;"><i class="layui-icon layui-icon-login-qq"></i></a>
+            <a href="javascript:;"><i class="layui-icon layui-icon-login-wechat"></i></a>
+            <a href="javascript:;"><i class="layui-icon layui-icon-login-weibo"></i></a>
+
+            <a href="register" class="layadmin-user-jump-change layadmin-link">注册帐号</a>
+        </div>
     </div>
 
     <div class="layui-trans layadmin-user-login-footer">
